log
Thu 18 Aug 2022 01:50:35 PM UTC: 
 tests:  0|6
total_score: 0/70
b584c3e
Thu 18 Aug 2022 04:52:59 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                  ^~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                       ^
Compilation failed
5e737b2
